# cpp-crypto

./: .gitignore  CMakeLists.txt  README.md  library.json  library.properties  platformio.ini
docs/: INSTALL_ARDUINO.MD  INSTALL_PLATFORMIO.md
examples/: README.md
examples/crypto/createAccount/: createAccount.ino
examples/model/account/: account.ino
examples/model/block/: block.ino
examples/model/currency/: currency.ino
examples/model/delegate/: delegate.ino
examples/model/fees/: fees.ino
examples/model/network/: network.ino
examples/model/peer/: peer.ino
examples/model/signature/: signature.ino
examples/model/transaction/: transaction.ino
examples/model/voter/: voter.ino
examples/types/address/: address.ino
examples/types/balance/: balance.ino
examples/types/hash/: hash.ino
include/bcl/: Base58Check.hpp
src/: CMakeLists.txt  arkCrypto.h
src/bcl/: Base58Check.cpp  Base58Check.hpp  Ripemd160.cpp  Ripemd160.hpp  bcl.h
src/configuration/: fee.cpp  fee.h  network.cpp  network.h
src/constants/: constants.h  currencies.h  networks.cpp  networks.h
src/crypto/: ark_crypto.cpp  ark_crypto.h
src/crypto/bip39/: bip39.cpp  bip39.h  en.h  en_str.h
src/enums/: fees.h  types.h
src/helpers/: crypto.h  encoding.h  helpers.h
src/identities/: address.cpp  address.h  encoding.h  privatekey.cpp  privatekey.h  publickey.cpp  publickey.h  wif.cpp  wif.h
src/models/: models.h
src/models/one/account/: account.cpp  account.h
src/models/one/block/: block.cpp  block.h
src/models/one/currency/: currency.cpp
src/models/one/delegate/: delegate.cpp  delegate.h
src/models/one/fees/: fees.cpp  fees.h
src/models/one/network/: network.cpp  network.h
src/models/one/peer/: peer.cpp  peer.h
src/models/one/transaction/: transaction.cpp  transaction.h
src/models/one/voter/: voter.cpp  voter.h
src/networks/: abstractnetwork.cpp  abstractnetwork.h  devnet.h  mainnet.h  testnet.h
src/transactions/: deserializer.cpp  deserializer.h  serializer.cpp  transaction.cpp  transaction.h
src/types/: address.h  balance.h  hash.h  types.h
src/types/base/: byteable.h  hexable.h
src/types/crypto/: eckey.h  ecpair.h  ecsignature.h
src/utilities/: formatting.h  platform.cpp  platform.h  utilities.h
src/utils/: message.cpp  message.h  slot.h
test/: CMakeLists.txt  README.md  platformio.ini
test/IoT/: test_main.cpp
test/configuration/: fee.cpp  network.cpp
test/crypto/: bip39.cpp  crypto.cpp
test/enums/: fees.cpp  types.cpp
test/identities/: address.cpp  privatekey.cpp  publickey.cpp  wif.cpp
test/model/: account.cpp  block.cpp  currency.cpp  delegate.cpp  fees.cpp  network.cpp  peer.cpp  transaction.cpp  voter.cpp
test/transactions/: builder.cpp  deserializer.cpp  serializer.cpp  transaction.cpp
test/types/: address.cpp  balance.cpp  hash.cpp  publickey.cpp  signature.cpp
test/utils/: message.cpp
(+2 files in other folders)
